--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build ./src/index.html --public-url ./ --no-source-maps -d ./",
+    "build": "parcel build ./src/index.html --public-url ./ --no-source-maps -d docs --no-content-hash",
     "publish_to_gh_pages": "echo gh"
   },
   "repository": {
