--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,6 +43,6 @@ jobs:
         git remote add upstream https://github.com/maybebored/personal-portfolio.git
         git checkout -b gh-pages
         git add .
-        git push upstream gh-pages
+        git push
       env:
         CI: true
